# tinel

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_ANALYSIS_IMPROVEMENTS.md  CONTRIBUTING.md  DISTRIBUTION_STRATEGY.md  INSTALLATION.md  README.md  RECOMMENDATION_GENERATOR_IMPROVEMENTS.md  REPOSITORY_STRATEGY.md  SECURITY.md  mcp-config-example.json  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  debug-specialist.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  SECURITY_PLAYBOOK.md  WORKFLOW_INTEGRATION.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ci.yml  dependency-update.yml  deploy-install-script.yml  distribution.yml  monitoring.yml  release.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/hardware-kernel-intelligence/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: performance_optimization_demo.py
infenix/: __init__.py  __main__.py  interfaces.py  server.py  system.py
infenix/cli/: __init__.py  config.py  error_handler.py  formatters.py  main.py  parser.py
infenix/cli/commands/: __init__.py  base.py  diagnostics.py  hardware.py  kernel.py  logs.py  router.py  server.py
infenix/diagnostics/: __init__.py  constants.py  diagnostic_strategies.py  diagnostics_engine.py  exceptions.py  hardware_diagnostics.py  query_components.py  query_interpreter.py  query_processor.py  query_processor_refactored.py  recommendation_generator.py
infenix/hardware/: __init__.py  cpu_analyzer.py  device_analyzer.py  graphics_analyzer.py  memory_analyzer.py  network_analyzer.py  pci_analyzer.py  storage_analyzer.py  usb_analyzer.py
infenix/kernel/: __init__.py  config_analyzer.py  config_parser.py  optimization.py
infenix/logs/: __init__.py  log_analyzer.py  log_parser.py  pattern_detector.py  streaming_parser.py
infenix/monitoring/: __init__.py  adaptive_manager.py  load_detector.py  observer.py  resource_monitor.py  strategies.py
infenix/tools/: __init__.py  base.py  diagnostics_tools.py  hardware_tools.py  kernel_tools.py  log_tools.py
packaging/arch/: PKGBUILD
packaging/binary/: build_binary.sh
packaging/debian/: changelog  control  copyright  rules  tinel.1  tinel.desktop
packaging/docker/: Dockerfile.alpine  Dockerfile.distroless  Dockerfile.ubuntu  README.md  docker-compose.yml  prometheus.yml
packaging/docker/config/: config.yaml
packaging/flatpak/: com.infenia.Tinel.metainfo.xml  com.infenia.Tinel.yaml  config.yaml  tinel.desktop
packaging/homebrew/: tinel.rb
packaging/nix/: default.nix  shell.nix
packaging/rpm/: bash_completion  tinel.conf  tinel.service
packaging/snap/: snapcraft.yaml  tinel.desktop
packaging/snap/hooks/: configure  install
scripts/: dev.sh  dev_tasks.sh  generate_coverage_report.py  install.sh  local_ci_check.sh  setup_dev_env.sh  setup_uv_env.sh
tests/: Makefile  README.md  __init__.py  conftest.py  test_adaptive_manager.py  test_cli_error_integration.py  test_cli_main_improvements.py  test_cli_parser.py  test_cpu_analyzer.py  test_diagnostics_engine.py  test_error_handler.py  test_error_handler.py.backup  test_formatters.py  test_graphics_analyzer.py  test_kernel_config_analyzer.py  test_kernel_config_parser.py  test_kernel_optimizer.py  test_load_detector.py  test_log_analyzer.py  test_log_parser.py  test_memory_analyzer.py  test_network_analyzer.py  test_pattern_detector.py  test_pci_analyzer.py  test_query_components.py  test_query_processor.py  test_recommendation_generator.py  test_resource_monitor.py  test_runner.py  test_server.py  test_server_diagnostics_tools.py  test_server_kernel_tools.py  test_server_log_tools.py  test_storage_analyzer.py  test_streaming_parser.py  test_usb_analyzer.py  utils.py
tests/cli/: test_main.py
tests/integration/: test_hardware_integration.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_cli_config.py  test_cli_error_handler.py  test_cli_main.py  test_cli_parser.py  test_cpu_analyzer.py  test_formatters.py  test_system.py
tests/unit/cli/: test_config.py  test_error_handler.py  test_formatters.py  test_main.py  test_parser.py
tests/unit/cli/commands/: test_base.py  test_hardware.py  test_router.py
tests/unit/hardware/: test_cpu_analyzer.py  test_device_analyzer.py
tests/unit/tools/: test_hardware_tools.py
tinel/: __init__.py  __main__.py  interfaces.py  system.py
tinel/cli/: __init__.py  config.py  error_handler.py  formatters.py  main.py  parser.py
tinel/cli/commands/: __init__.py  base.py  hardware.py  router.py
tinel/hardware/: __init__.py  cpu_analyzer.py  device_analyzer.py
tinel/tools/: __init__.py  base.py  hardware_tools.py
